--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
           <div class="fieldgrid">
             <div>
               <label>API Base URL</label>
-              <input id="apiBase" placeholder="https://fire-api-wixz.onrender.com" />
+              <input id="apiBase" placeholder="https://fire-api-wixz.onrender.com/fire" />
               <div class="small">Must include <span class="mono">https://</span></div>
             </div>
             <div>
