--- a/index.html
+++ b/index.html
@@ -362,13 +362,12 @@
           <div class="fieldgrid">
             <div>
               <label>API Base URL</label>
-              <input id="apiBase" placeholder="https://fire-api-wixz.onrender.com/fire" />
+              <input id="apiBase" placeholder="https://fire-api-wixz.onrender.com" />
               <div class="small">Must include <span class="mono">https://</span></div>
             </div>
             <div>
-              <label>Endpoint path (optional)</label>
-              <input id="apiPath" placeholder="/fire" />
-              <div class="small">If blank, app will try common paths automatically.</div>
+              <label>Endpoint path</label>
+              <input id="apiPath" value="/fire" />
             </div>
           </div>
 
