--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 const LS_KEY = "fire_frontend_state_v3";
 let state = {
   apiBase: "https://fire-api-wixz.onrender.com",
-  apiPath: "", // optional
+  apiPath: "/fire",
   mode: "yearly",
   inputs: {
     current_age: 25,
