--- a/index.html
+++ b/index.html
@@ -620,6 +620,13 @@ let state = {
     stock_growth: 0.06,
     stock_yearly_contribution: 20000,
     starting_stock_value: 35000
+	
+	fire_swr: 0.04,
+    super_access_age: 60,
+    super_starting_balance: 120000,
+    super_sg_rate: 0.11,
+    super_growth: 0.065,
+    super_additional_annual: 0
   },
   property_list: [
     {
