--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ let state = {
     average_salary_increase: 0.035,
     stock_growth: 0.06,
     stock_yearly_contribution: 20000,
-    starting_stock_value: 35000
+    starting_stock_value: 35000,
 	
 	fire_swr: 0.04,
     super_access_age: 60,
