--- a/index.html
+++ b/index.html
@@ -462,6 +462,36 @@
                 <label>starting_stock_value</label>
                 <input id="starting_stock_value" type="number" step="1"/>
               </div>
+			  <div>
+				  <label>fire_swr</label>
+				  <input id="fire_swr" type="number" step="0.001" />
+				</div>
+
+				<div>
+				  <label>super_access_age</label>
+				  <input id="super_access_age" type="number" step="1" />
+				</div>
+
+				<div>
+				  <label>super_starting_balance</label>
+				  <input id="super_starting_balance" type="number" step="1" />
+				</div>
+
+				<div>
+				  <label>super_sg_rate (e.g. 0.11)</label>
+				  <input id="super_sg_rate" type="number" step="0.001" />
+				</div>
+
+				<div>
+				  <label>super_growth (e.g. 0.065)</label>
+				  <input id="super_growth" type="number" step="0.001" />
+				</div>
+
+				<div>
+				  <label>super_additional_annual</label>
+				  <input id="super_additional_annual" type="number" step="1" />
+				</div>
+
             </div>
           </div>
         </div>
