--- a/index.html
+++ b/index.html
@@ -1372,6 +1372,7 @@ function renderResults(result){
     type: "line",
     data: { labels, datasets },
     options: {
+	  locale: "en-US",
       responsive: true,
       interaction: { mode: "index", intersect: false },
       plugins: {
