--- a/index.html
+++ b/index.html
@@ -1127,11 +1127,14 @@ async function callPath(base, path, payload){
 // If we accidentally hit the frontend (Netlify), we'll get HTML back
 if ((text || "").trim().startsWith("<!DOCTYPE html")) {
   throw new Error(
-    `HIT_FRONTEND_HTML @ ${path}\n` +
-    `Your apiBase is probably pointing to the Netlify site, not Render.\n` +
-    `apiBase=${base}\n--- body (first 200 chars) ---\n${text.slice(0,200)}`
+    "HIT_FRONTEND_HTML @ " + path +
+    "\nYour apiBase is probably pointing to the Netlify site, not Render." +
+    "\napiBase=" + base +
+    "\n--- body (first 200 chars) ---\n" +
+    text.slice(0, 200)
   );
 }
+
 
 
   // Try JSON, but don't assume it
